--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "format:check": "prettier -c \"**/*.{ts,tsx,md}\""
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.409.0",
@@ -28,6 +30,7 @@
     "lucide-react": "^0.276.0",
     "next": "13.4.12",
     "postcss": "8.4.27",
+    "prettier": "^3.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
