--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "firebase": "^10.3.1",
+    "framer-motion": "^10.16.4",
     "lucide-react": "^0.276.0",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "prettier": "^3.0.3",
+    "qrcode.react": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
