--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format:check": "prettier -c \"**/*.{ts,tsx,md}\""
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
