--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format:check": "prettier -c \"**/*.{ts,tsx,md}\""
   },
   "dependencies": {
+    "@prisma/client": "5.3.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
@@ -30,6 +31,7 @@
     "next": "13.4.12",
     "postcss": "8.4.27",
     "prettier": "^3.0.3",
+    "prisma": "^5.3.1",
     "qrcode.react": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
