Add @types/platform and update dependencies.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@types/node": "20.4.5",
+    "@types/platform": "^1.3.6",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
@@ -25,21 +26,23 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "eslint": "8.46.0",
-    "eslint-config-next": "13.4.12",
+    "eslint-config-next": "latest",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.276.0",
-    "next": "13.4.12",
+    "next": "latest",
+    "platform": "^1.3.6",
     "postcss": "8.4.27",
     "prettier": "^3.0.3",
     "prisma": "^5.3.1",
     "qrcode.react": "^3.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "latest",
+    "react-dom": "latest",
     "react-hook-form": "^7.46.1",
     "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-animated": "^1.0.1",
     "typescript": "5.1.6",
     "zod": "^3.22.2"
   }
