--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.27.1",
     "@prisma/client": "5.3.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -43,6 +44,7 @@
     "react-dom": "latest",
     "react-hook-form": "^7.46.1",
     "react-hot-toast": "^2.4.1",
+    "svix": "^1.13.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
