--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-dom": "latest",
     "react-hook-form": "^7.46.1",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.12.0",
     "svix": "^1.13.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
