--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-animated": "^1.0.1",
     "typescript": "5.1.6",
+    "use-debounce": "^10.0.0",
     "zod": "^3.22.2"
   },
   "devDependencies": {
