--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
@@ -35,6 +37,7 @@
     "chart.js": "^4.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "eslint": "8.46.0",
     "eslint-config-next": "latest",
     "framer-motion": "^10.16.4",
@@ -47,6 +50,7 @@
     "qrcode.react": "^3.1.0",
     "react": "latest",
     "react-chartjs-2": "^5.2.0",
+    "react-day-picker": "^8.9.1",
     "react-dom": "latest",
     "react-hook-form": "^7.46.1",
     "react-hot-toast": "^2.4.1",
