--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/platform": "^1.3.6",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
+    "@types/ua-parser-js": "^0.7.39",
     "autoprefixer": "10.4.14",
     "axios": "^1.5.0",
     "chart.js": "^4.4.0",
@@ -43,7 +44,6 @@
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.276.0",
     "next": "latest",
-    "platform": "^1.3.6",
     "postcss": "8.4.27",
     "prettier": "^3.0.3",
     "prisma": "^5.3.1",
@@ -61,6 +61,7 @@
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-animated": "^1.0.1",
     "typescript": "5.1.6",
+    "ua-parser-js": "^1.0.37",
     "use-debounce": "^10.0.0",
     "zod": "^3.22.2"
   },
