Add prettier formatting for TypeScript files

--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "lint-staged": {
     "*.tsx": [
       "prettier --write"
+    ],
+    "*.ts": [
+      "prettier --write"
     ]
   },
   "dependencies": {
