--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "date-fns": "^2.30.0",
     "eslint": "8.46.0",
     "eslint-config-next": "latest",
+    "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.276.0",
     "next": "latest",
@@ -55,7 +56,6 @@
     "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.9.1",
     "react-dom": "latest",
-    "react-hook-form": "^7.46.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "svix": "^1.13.0",
@@ -63,9 +63,10 @@
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-animated": "^1.0.1",
-    "typescript": "5.1.6",
+    "typescript": "v5.2.2",
     "ua-parser-js": "^1.0.37",
     "use-debounce": "^10.0.0",
+    "yup": "^1.3.2",
     "zod": "^3.22.2"
   },
   "devDependencies": {
