--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@clerk/nextjs": "^4.27.1",
     "@prisma/client": "5.3.1",
     "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-dialog": "1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
