--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/platform": "^1.3.6",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
+    "@types/swagger-ui-react": "^4.18.3",
     "@types/ua-parser-js": "^0.7.39",
     "@unkey/api": "^0.13.0",
     "autoprefixer": "10.4.14",
@@ -51,6 +52,7 @@
     "hono": "^3.11.4",
     "lucide-react": "^0.276.0",
     "next": "latest",
+    "next-swagger-doc": "^0.4.0",
     "postcss": "8.4.31",
     "prettier": "^3.0.3",
     "prisma": "^5.3.1",
@@ -62,6 +64,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "svix": "^1.13.0",
+    "swagger-ui-react": "^5.10.3",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animated": "^1.0.1",
