--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
     "@types/ua-parser-js": "^0.7.39",
-    "@unkey/api": "^0.13.0",
+    "@unkey/api": "0.10.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.5.0",
     "chart.js": "^4.4.0",
