Dynamic links api (#51)
* Add new dependencies @unkey/api and hono

* add useID prop incase we are calling from api route

* Add dynamic links API endpoints and validation

* add hono api configuration

* Add @types/swagger-ui-react and next-swagger-doc dependencies

* Refactor middleware and update ignored routes

* add swagger documentation to api endpoints

* Add Swagger documentation for API

* Add API documentation page

* Add ReactSwagger component

* Revert "Add ReactSwagger component"

This reverts commit a78d600ad9e7e2f7d18d677831d09a46bb384b9a.

* Revert "Add API documentation page"

This reverts commit ac0960c0820a1d452841eddb54bb61b161704eb8.

* Revert "Refactor middleware and update ignored routes"

This reverts commit 4e34a382c0c64b2f80c18868fe529fd4fbd44097.

* Revert "Add Swagger documentation for API"

This reverts commit f0ac9713707a384aad6838b4b9a197a92842a209.

* Revert "Add @types/swagger-ui-react and next-swagger-doc dependencies"

This reverts commit fc0261bcd60c719cbb257c3a6963bbd36da51232.

* Revert "add swagger documentation to api endpoints"

This reverts commit b2ac809362726a3ec4d1b0dce0c7e9ce7d003671.

* only return the complete url after creating a dynamic link

* Update @unkey/api version in package.json

* add server actions for handling api-key related stuff

* Add ApiKeyCard component

* Add CreateAPIKey component

* Add settings page with API key functionality

* Update tab-switcher component to include settings link

* Refactor key creation and retrieval functions

* Remove unnecessary comment

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
     "@types/ua-parser-js": "^0.7.39",
+    "@unkey/api": "0.10.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.5.0",
     "chart.js": "^4.4.0",
@@ -47,6 +48,7 @@
     "eslint-config-next": "latest",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
+    "hono": "^3.11.4",
     "lucide-react": "^0.276.0",
     "next": "latest",
     "postcss": "8.4.31",
