update example environment variables

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,14 @@
-FIREBASE_API_KEY=your_api_key_here
-FIREBASE_AUTH_DOMAIN=your_auth_domain_here
-FIREBASE_PROJECT_ID=your_project_id_here
-FIREBASE_STORAGE_BUCKET=your_storage_bucket_here
-FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id_here
-FIREBASE_APP_ID=your_app_id_here
 
+DATABASE_URL="Your MYSQL Database URL Example: mysql://root:password@localhost:3306/database_name"
 HOST=http://localhost:3000
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY="Clerk Publishable Key"
+CLERK_SECRET_KEY="Clerk Secret Key"
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=/auth/sign-in
+NEXT_PUBLIC_CLERK_SIGN_UP_URL=/auth/sign-up
+NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/dashboard
+NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/dashboard
+WEBHOOK_SECRET="Clerk Webhook Secret"
+
+NEXT_PUBLIC_ROOT_DOMAIN=http://localhost:3000
+UNKEY_API_ID="Unkey API ID"
+UNKEY_TOKEN="Unkey Token"
