--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     ]
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.27.1",
+    "@clerk/nextjs": "4.29.3",
     "@prisma/client": "5.3.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "1.0.5",
