--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/react-dom": "18.2.7",
     "@types/ua-parser-js": "^0.7.39",
     "@unkey/api": "^0.13.1",
+    "@upstash/redis": "^1.28.2",
     "@vercel/analytics": "^1.1.1",
     "autoprefixer": "10.4.14",
     "axios": "^1.5.0",
