--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "eslint-config-next": "latest",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
+    "geist": "^1.2.2",
+    "gray-matter": "^4.0.3",
     "hono": "^3.11.4",
     "lucide-react": "^0.276.0",
     "next": "latest",
@@ -62,6 +64,7 @@
     "react-day-picker": "^8.9.1",
     "react-dom": "latest",
     "react-hot-toast": "^2.4.1",
+    "react-markdown": "^9.0.1",
     "svix": "^1.13.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
@@ -73,6 +76,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "husky": "^8.0.0",
     "lint-staged": "^15.1.0"
   }
