--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@t3-oss/env-core": "^0.8.0",
+    "@tsparticles/engine": "^3.3.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.3.0",
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
@@ -45,6 +48,7 @@
     "chart.js": "^4.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "cmdk": "^0.2.1",
     "date-fns": "^2.30.0",
     "eslint": "8.46.0",
     "eslint-config-next": "latest",
@@ -73,6 +77,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@headlessui/react": "^1.7.1",
     "husky": "^8.0.0",
     "lint-staged": "^15.1.0"
   }
