chore: update db url to point to docker mysql container

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 
-DATABASE_URL="Your MYSQL Database URL Example: mysql://root:password@localhost:3306/database_name"
+DATABASE_URL="mysql://ishortn:ishortn@localhost:3306/ishortn"
 HOST=http://localhost:3000
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY="Clerk Publishable Key"
 CLERK_SECRET_KEY="Clerk Secret Key"
