--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "d": "docker compose -f docker/docker-compose.yml up -d && bun run dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
