--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "d": "docker compose -f docker/docker-compose.yml up -d && bun run dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -41,7 +42,6 @@
     "@types/ua-parser-js": "^0.7.39",
     "@unkey/api": "^0.13.1",
     "@upstash/redis": "^1.28.2",
-    "@vercel/analytics": "^1.1.1",
     "autoprefixer": "10.4.14",
     "axios": "^1.5.0",
     "chart.js": "^4.4.0",
