--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toast": "^1.1.5",
     "@react-email/components": "0.0.15",
     "@t3-oss/env-core": "^0.8.0",
     "@types/node": "20.4.5",
@@ -58,6 +57,7 @@
     "js-yaml": "^4.1.0",
     "lucide-react": "^0.276.0",
     "next": "latest",
+    "next-themes": "^0.3.0",
     "postcss": "8.4.31",
     "prettier": "^3.0.3",
     "prisma": "^5.3.1",
@@ -67,7 +67,6 @@
     "react-day-picker": "^8.9.1",
     "react-dom": "latest",
     "react-email": "^2.1.0",
-    "react-hot-toast": "^2.4.1",
     "react-markdown": "^9.0.1",
     "resend": "^3.2.0",
     "svix": "^1.13.0",
