--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/ua-parser-js": "^0.7.39",
     "@unkey/api": "^0.13.1",
     "@upstash/redis": "^1.28.2",
+    "@vercel/edge": "^1.1.1",
     "autoprefixer": "10.4.14",
     "axios": "^1.5.0",
     "chart.js": "^4.4.0",
