remove upstash redis and install ioredis

--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "@types/react-dom": "18.2.7",
     "@types/ua-parser-js": "^0.7.39",
     "@unkey/api": "^0.13.1",
-    "@upstash/redis": "^1.28.2",
     "@vercel/edge": "^1.1.1",
     "autoprefixer": "10.4.14",
     "axios": "^1.5.0",
@@ -55,6 +54,7 @@
     "geist": "^1.2.2",
     "gray-matter": "^4.0.3",
     "hono": "^3.11.4",
+    "ioredis": "^5.3.2",
     "js-yaml": "^4.1.0",
     "lucide-react": "^0.276.0",
     "next": "latest",
