add REDIS_URL env variable

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 
 DATABASE_URL="mysql://ishortn:ishortn@localhost:3306/ishortn"
 HOST=http://localhost:3000
+
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY="Clerk Publishable Key"
 CLERK_SECRET_KEY="Clerk Secret Key"
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/auth/sign-in
@@ -8,6 +9,8 @@ NEXT_PUBLIC_CLERK_SIGN_UP_URL=/auth/sign-up
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/dashboard
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/dashboard
 WEBHOOK_SECRET="Clerk Webhook Secret"
+
+REDIS_URL=redis://localhost:6379/0
 
 UNKEY_API_ID="Unkey API ID"
 UNKEY_TOKEN="Unkey Token"
