--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -15,5 +15,14 @@ services:
     volumes:
       - ishortndb:/var/lib/postgresql/data
 
+  cache:
+    image: redis:latest
+    container_name: ishortn_cache
+    ports:
+      - "6379:6379"
+    volumes:
+      - ishortncache:/var/lib/redis/data
+
 volumes:
   ishortndb:
+  ishortncache:
