--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "lucide-react": "^0.276.0",
     "next": "latest",
     "next-themes": "^0.3.0",
+    "papaparse": "^5.4.1",
     "postcss": "8.4.31",
     "prettier": "^3.0.3",
     "prisma": "^5.3.1",
