--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "build": "next build",
-    "db:push": "dotenv drizzle-kit push:pg",
-    "db:generate": "dotenv drizzle-kit generate:pg",
+    "db:push": "dotenv drizzle-kit push",
+    "db:generate": "dotenv drizzle-kit generate",
     "db:migrate": "dotenv tsx src/server/db/migrate.ts",
     "db:studio": "dotenv drizzle-kit studio",
     "dev": "next dev",
@@ -16,6 +16,7 @@
     "stripe:listen": "stripe listen --forward-to localhost:3000/api/webhooks/stripe --latest"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.0.12",
     "@hookform/resolvers": "^3.3.4",
     "@lucia-auth/adapter-drizzle": "1.0.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -33,11 +34,14 @@
     "@trpc/next": "^10.45.2",
     "@trpc/react-query": "^10.45.2",
     "@trpc/server": "^10.45.2",
+    "@types/ua-parser-js": "^0.7.39",
+    "@vercel/functions": "^1.0.2",
     "arctic": "^1.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "drizzle-orm": "^0.30.8",
-    "lucia": "3.0.0",
+    "install": "^0.13.0",
+    "mysql2": "^3.9.7",
     "next": "^14.2.1",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.13",
@@ -56,6 +60,7 @@
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
+    "ua-parser-js": "^1.0.37",
     "vaul": "^0.8.9",
     "zod": "^3.22.4"
   },
@@ -72,7 +77,7 @@
     "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.4.19",
     "dotenv-cli": "^7.4.1",
-    "drizzle-kit": "^0.20.14",
+    "drizzle-kit": "^0.21.2",
     "eslint": "^8.57.0",
     "pg": "^8.11.5",
     "postcss": "^8.4.38",
