--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "db:migrate": "dotenv tsx src/server/db/migrate.ts",
     "db:studio": "dotenv drizzle-kit studio",
     "dev": "next dev",
+    "d": "docker compose -f docker/docker-compose.yml up -d && bun run dev",
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
@@ -24,6 +25,8 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@react-email/components": "^0.0.12",
@@ -37,19 +40,26 @@
     "@types/ua-parser-js": "^0.7.39",
     "@vercel/functions": "^1.0.2",
     "arctic": "^1.5.0",
+    "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
     "drizzle-orm": "^0.30.8",
     "install": "^0.13.0",
+    "lucide-react": "^0.379.0",
     "mysql2": "^3.9.7",
+    "nanoid": "^5.0.7",
     "next": "^14.2.1",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.13",
     "oslo": "^1.2.0",
     "postgres": "^3.4.4",
+    "qrcode.react": "^3.1.0",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.51.3",
+    "react-hook-form": "^7.51.5",
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "rehype-raw": "^7.0.0",
@@ -61,6 +71,7 @@
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "ua-parser-js": "^1.0.37",
+    "use-debounce": "^10.0.1",
     "vaul": "^0.8.9",
     "zod": "^3.22.4"
   },
