--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.30.8",
+    "framer-motion": "^11.2.10",
     "install": "^0.13.0",
     "lucide-react": "^0.379.0",
     "mysql2": "^3.9.7",
