chore: update npm dependencies to include "resend" and "svix"

--- a/package.json
+++ b/package.json
@@ -65,10 +65,12 @@
     "react-syntax-highlighter": "^15.5.0",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
+    "resend": "^3.3.0",
     "server-only": "^0.0.1",
     "sonner": "^1.4.41",
     "stripe": "^14.25.0",
     "superjson": "^2.2.1",
+    "svix": "^1.24.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "ua-parser-js": "^1.0.37",
