--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@clerk/nextjs": "^5.0.12",
     "@hookform/resolvers": "^3.3.4",
+    "@lemonsqueezy/lemonsqueezy.js": "^3.2.0",
     "@lucia-auth/adapter-drizzle": "1.0.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -27,6 +28,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@react-email/components": "^0.0.12",
@@ -104,6 +106,5 @@
   },
   "ct3aMetadata": {
     "initVersion": "7.24.2"
-  },
-  "packageManager": "pnpm@8.11.0"
+  }
 }
