--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@react-email/components": "^0.0.12",
     "@react-email/render": "^0.0.10",
     "@t3-oss/env-nextjs": "^0.7.3",
@@ -39,9 +41,11 @@
     "@trpc/next": "^10.45.2",
     "@trpc/react-query": "^10.45.2",
     "@trpc/server": "^10.45.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/ua-parser-js": "^0.7.39",
     "@vercel/functions": "^1.0.2",
     "arctic": "^1.5.0",
+    "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -58,6 +62,7 @@
     "nodemailer": "^6.9.13",
     "oslo": "^1.2.0",
     "postgres": "^3.4.4",
+    "posthog-js": "^1.144.2",
     "qrcode.react": "^3.1.0",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
