--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@lemonsqueezy/lemonsqueezy.js": "^3.2.0",
     "@lucia-auth/adapter-drizzle": "1.0.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
@@ -29,6 +30,7 @@
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.0.4",
@@ -63,6 +65,7 @@
     "oslo": "^1.2.0",
     "postgres": "^3.4.4",
     "posthog-js": "^1.144.2",
+    "qrcode-with-logos": "^1.1.0",
     "qrcode.react": "^3.1.0",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -70,6 +73,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.5",
     "react-markdown": "^9.0.1",
+    "react-qrcode-logo": "^3.0.0",
     "react-syntax-highlighter": "^15.5.0",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
