chore: update npm dependencies to latest versions

--- a/package.json
+++ b/package.json
@@ -53,13 +53,14 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.30.8",
+    "eslint-config-next": "latest",
     "framer-motion": "^11.2.10",
     "install": "^0.13.0",
     "ioredis": "^5.4.1",
     "lucide-react": "^0.379.0",
     "mysql2": "^3.9.7",
     "nanoid": "^5.0.7",
-    "next": "^14.2.1",
+    "next": "latest",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.13",
     "oslo": "^1.2.0",
@@ -67,13 +68,12 @@
     "posthog-js": "^1.144.2",
     "qrcode-with-logos": "^1.1.0",
     "qrcode.react": "^3.1.0",
-    "react": "18.2.0",
+    "react": "latest",
     "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "18.2.0",
+    "react-dom": "latest",
     "react-hook-form": "^7.51.5",
     "react-markdown": "^9.0.1",
-    "react-qrcode-logo": "^3.0.0",
     "react-syntax-highlighter": "^15.5.0",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
