--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "@lemonsqueezy/lemonsqueezy.js": "^3.2.0",
     "@lucia-auth/adapter-drizzle": "1.0.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
-    "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
@@ -30,7 +29,6 @@
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.0.4",
@@ -53,25 +51,23 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.30.8",
-    "eslint-config-next": "latest",
     "framer-motion": "^11.2.10",
     "install": "^0.13.0",
     "ioredis": "^5.4.1",
     "lucide-react": "^0.379.0",
     "mysql2": "^3.9.7",
     "nanoid": "^5.0.7",
-    "next": "latest",
+    "next": "^14.2.1",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.13",
     "oslo": "^1.2.0",
     "postgres": "^3.4.4",
     "posthog-js": "^1.144.2",
-    "qrcode-with-logos": "^1.1.0",
     "qrcode.react": "^3.1.0",
-    "react": "latest",
+    "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "latest",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.51.5",
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.5.0",
