feat: custom domains

--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
-    "drizzle-orm": "^0.30.8",
+    "drizzle-orm": "0.32.0",
     "eslint-config-next": "latest",
     "framer-motion": "^11.2.10",
     "install": "^0.13.0",
@@ -103,7 +103,7 @@
     "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.4.19",
     "dotenv-cli": "^7.4.1",
-    "drizzle-kit": "^0.21.2",
+    "drizzle-kit": "latest",
     "eslint": "^8.57.0",
     "pg": "^8.11.5",
     "postcss": "^8.4.38",
