feat: tracking unique clicks

--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "framer-motion": "^11.2.10",
     "install": "^0.13.0",
     "ioredis": "^5.4.1",
-    "lucide-react": "^0.379.0",
+    "lucide-react": "^0.414.0",
     "mysql2": "^3.9.7",
     "nanoid": "^5.0.7",
     "next": "latest",
@@ -69,12 +69,12 @@
     "qrcode-with-logos": "^1.1.0",
     "qrcode.react": "^3.1.0",
     "react": "latest",
-    "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "latest",
     "react-hook-form": "^7.51.5",
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.5.0",
+    "recharts": "^2.12.7",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
     "resend": "^3.3.0",
