--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "next-lucia-auth",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "build": "next build",
     "db:push": "dotenv drizzle-kit push",
@@ -37,6 +36,7 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@react-email/components": "^0.0.12",
     "@react-email/render": "^0.0.10",
+    "@sentry/nextjs": "^8",
     "@t3-oss/env-nextjs": "^0.7.3",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.45.2",
