--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.1.2",
-    "@react-email/components": "^0.0.12",
+    "@react-email/components": "0.0.25",
     "@react-email/render": "^0.0.10",
     "@sentry/nextjs": "^8",
     "@t3-oss/env-nextjs": "^0.7.3",
@@ -51,6 +51,7 @@
     "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "csv-parse": "^5.5.6",
     "date-fns": "^3.6.0",
     "drizzle-orm": "0.32.0",
     "eslint-config-next": "latest",
@@ -71,6 +72,7 @@
     "react": "latest",
     "react-day-picker": "^8.10.1",
     "react-dom": "latest",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.5",
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.5.0",
@@ -109,6 +111,7 @@
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
+    "react-email": "3.0.1",
     "tailwindcss": "^3.4.3",
     "tsx": "^4.7.2",
     "typescript": "^5.4.5"
