--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cmdk": "^1.0.0",
     "csv-parse": "^5.5.6",
     "date-fns": "^3.6.0",
     "drizzle-orm": "0.32.0",
