--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@trpc/react-query": "^10.45.2",
     "@trpc/server": "^10.45.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/react-simple-maps": "^3.0.6",
     "@types/ua-parser-js": "^0.7.39",
     "@vercel/functions": "^1.0.2",
     "arctic": "^1.5.0",
@@ -53,6 +54,7 @@
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "csv-parse": "^5.5.6",
+    "d3-scale": "^4.0.2",
     "date-fns": "^3.6.0",
     "drizzle-orm": "0.32.0",
     "eslint-config-next": "latest",
@@ -76,6 +78,7 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.5",
     "react-markdown": "^9.0.1",
+    "react-simple-maps": "^3.0.0",
     "react-syntax-highlighter": "^15.5.0",
     "recharts": "^2.12.7",
     "rehype-raw": "^7.0.0",
