feat: add @ai-sdk/google geminiModel

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "stripe:listen": "stripe listen --forward-to localhost:3000/api/webhooks/stripe --latest"
   },
   "dependencies": {
+    "@ai-sdk/google": "^0.0.52",
     "@clerk/nextjs": "^5.0.12",
     "@hookform/resolvers": "^3.3.4",
     "@lemonsqueezy/lemonsqueezy.js": "^3.2.0",
@@ -47,7 +48,7 @@
     "@types/react-simple-maps": "^3.0.6",
     "@types/ua-parser-js": "^0.7.39",
     "@vercel/functions": "^1.0.2",
-    "arctic": "^1.5.0",
+    "ai": "^3.4.16",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
@@ -59,7 +60,6 @@
     "drizzle-orm": "0.32.0",
     "eslint-config-next": "latest",
     "framer-motion": "^11.2.10",
-    "install": "^0.13.0",
     "ioredis": "^5.4.1",
     "lucide-react": "^0.414.0",
     "mysql2": "^3.9.7",
@@ -67,7 +67,6 @@
     "next": "latest",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.13",
-    "oslo": "^1.2.0",
     "postgres": "^3.4.4",
     "posthog-js": "^1.144.2",
     "qrcode-with-logos": "^1.1.0",
@@ -77,16 +76,11 @@
     "react-dom": "latest",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.5",
-    "react-markdown": "^9.0.1",
     "react-simple-maps": "^3.0.0",
-    "react-syntax-highlighter": "^15.5.0",
     "recharts": "^2.12.7",
-    "rehype-raw": "^7.0.0",
-    "remark-gfm": "^4.0.0",
     "resend": "^3.3.0",
     "server-only": "^0.0.1",
     "sonner": "^1.4.41",
-    "stripe": "^14.25.0",
     "superjson": "^2.2.1",
     "svix": "^1.24.0",
     "tailwind-merge": "^2.2.2",
