--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "lucide-react": "^0.414.0",
     "mysql2": "^3.9.7",
     "nanoid": "^5.0.7",
-    "next": "latest",
+    "next": "^14.2.15",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.13",
     "postgres": "^3.4.4",
