chore: update drizzle-orm and drizzle-kit versions

--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "csv-parse": "^5.5.6",
     "d3-scale": "^4.0.2",
     "date-fns": "^3.6.0",
-    "drizzle-orm": "0.32.0",
+    "drizzle-orm": "0.35.3",
     "eslint-config-next": "latest",
     "framer-motion": "^11.2.10",
     "ioredis": "^5.4.1",
@@ -104,7 +104,7 @@
     "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.4.19",
     "dotenv-cli": "^7.4.1",
-    "drizzle-kit": "latest",
+    "drizzle-kit": "0.26.2",
     "eslint": "^8.57.0",
     "postcss": "^8.4.38",
     "react-email": "3.0.1",
