--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "db:push": "dotenv drizzle-kit push",
     "db:generate": "dotenv drizzle-kit generate",
     "db:migrate": "dotenv tsx src/server/db/migrate.ts",
+    "db:production:migrate": "dotenv -e .env.prod tsx src/server/db/migrate.ts",
     "db:studio": "dotenv drizzle-kit studio",
     "dev": "next dev",
     "d": "docker compose -f docker/docker-compose.yml up -d && bun run dev",
