feat: integrate next-view-transitions for improved navigation
- Add next-view-transitions package to enhance link transitions across the application.
- Update various components to use the new Link from next-view-transitions for smoother navigation.
- Refactor layout and landing page components to incorporate view transitions, improving user experience.

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "nanoid": "^5.0.7",
     "next": "^14.2.15",
     "next-themes": "^0.2.1",
+    "next-view-transitions": "^0.3.4",
     "nodemailer": "^6.9.13",
     "posthog-js": "^1.144.2",
     "qrcode-with-logos": "^1.1.0",
