--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "db:migrate": "dotenv tsx src/server/db/migrate.ts",
     "db:production:migrate": "dotenv -e .env.prod tsx src/server/db/migrate.ts",
     "db:studio": "dotenv drizzle-kit studio",
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "d": "docker compose -f docker/docker-compose.yml up -d && bun run dev",
     "start": "next start",
     "lint": "next lint",
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.2.1",
-    "@clerk/nextjs": "^5.5.7",
+    "@clerk/nextjs": "^6.16.0",
     "@hookform/resolvers": "^3.3.4",
     "@lemonsqueezy/lemonsqueezy.js": "^3.2.0",
     "@lucia-auth/adapter-drizzle": "1.0.0",
@@ -34,7 +34,7 @@
     "@radix-ui/react-select": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slider": "^1.2.0",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.1.2",
@@ -60,22 +60,22 @@
     "d3-scale": "^4.0.2",
     "date-fns": "^3.6.0",
     "drizzle-orm": "0.35.3",
-    "eslint-config-next": "latest",
+    "eslint-config-next": "15.3.1",
     "framer-motion": "^11.2.10",
     "ioredis": "^5.4.1",
     "lucide-react": "^0.414.0",
     "mysql2": "^3.9.7",
     "nanoid": "^5.0.7",
-    "next": "^14.2.15",
+    "next": "15.3.1",
     "next-themes": "^0.2.1",
     "next-view-transitions": "^0.3.4",
     "nodemailer": "^6.9.13",
     "posthog-js": "^1.144.2",
     "qrcode-with-logos": "^1.1.0",
     "qrcode.react": "^3.1.0",
-    "react": "latest",
+    "react": "19.1.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "latest",
+    "react-dom": "19.1.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.5",
     "react-simple-maps": "^3.0.0",
@@ -94,13 +94,13 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.3",
-    "@next/eslint-plugin-next": "^14.2.1",
+    "@next/eslint-plugin-next": "15.3.1",
     "@tailwindcss/typography": "^0.5.12",
     "@types/eslint": "^8.56.9",
     "@types/node": "^18.19.31",
     "@types/nodemailer": "^6.4.14",
-    "@types/react": "^18.2.79",
-    "@types/react-dom": "^18.2.25",
+    "@types/react": "19.1.2",
+    "@types/react-dom": "19.1.2",
     "@types/react-syntax-highlighter": "^15.5.11",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
@@ -116,5 +116,9 @@
   },
   "ct3aMetadata": {
     "initVersion": "7.24.2"
+  },
+  "overrides": {
+    "@types/react": "19.1.2",
+    "@types/react-dom": "19.1.2"
   }
 }
