--- a/package.json
+++ b/package.json
@@ -69,16 +69,16 @@
     "lucide-react": "^0.414.0",
     "mysql2": "^3.9.7",
     "nanoid": "^5.0.7",
-    "next": "15.3.1",
+    "next": "15.5.7",
     "next-themes": "^0.2.1",
     "next-view-transitions": "^0.3.4",
     "nodemailer": "^6.9.13",
     "posthog-js": "^1.144.2",
     "qrcode-with-logos": "^1.1.0",
     "qrcode.react": "^3.1.0",
-    "react": "19.1.0",
+    "react": "^19.2.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.2.1",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.5",
     "react-simple-maps": "^3.0.0",
