--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,10 @@
     {
       "path": "/api/cron/domain-reminders",
       "schedule": "0 9 * * *"
+    },
+    {
+      "path": "/api/cron/cleanup-teams",
+      "schedule": "0 0 * * *"
     }
   ]
 }
