feat(qrcodes): add advanced QR code styling with new generator
Implements a custom QR code generator with multiple pixel styles
(square, rounded, dot, squircle, row, column), customizable marker
shapes, visual effects (crystalize, liquidify), and margin noise
options. Replaces the previous qrcode-with-logos library.

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@trpc/server": "^10.45.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/react-simple-maps": "^3.0.6",
+    "@types/seedrandom": "^3.0.8",
     "@types/ua-parser-js": "^0.7.39",
     "@vercel/functions": "^1.5.2",
     "ai": "^4.1.54",
@@ -60,6 +61,7 @@
     "csv-parse": "^5.5.6",
     "d3-scale": "^4.0.2",
     "date-fns": "^3.6.0",
+    "delaunator": "^5.0.1",
     "drizzle-orm": "0.35.3",
     "eslint-config-next": "15.3.1",
     "framer-motion": "^11.2.10",
@@ -85,13 +87,16 @@
     "remark-gfm": "^4.0.1",
     "remark-html": "^16.0.1",
     "resend": "^3.3.0",
+    "seedrandom": "^3.0.5",
     "server-only": "^0.0.1",
     "sonner": "^1.4.41",
+    "stackblur-canvas": "^2.7.0",
     "superjson": "^2.2.1",
     "svix": "^1.24.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "ua-parser-js": "^2.0.7",
+    "uqr": "^0.1.2",
     "use-debounce": "^10.0.1",
     "vaul": "^0.8.9",
     "zod": "^3.22.4"
@@ -101,6 +106,7 @@
     "@next/eslint-plugin-next": "15.3.1",
     "@tailwindcss/typography": "^0.5.12",
     "@types/d3-scale": "^4.0.9",
+    "@types/delaunator": "^5.0.3",
     "@types/eslint": "^8.56.9",
     "@types/node": "^18.19.31",
     "@types/react": "19.1.2",
