--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,8 +33,8 @@ jobs:
       - name: Install dependencies
         run: bun install --frozen-lockfile
 
-      - name: Run ESLint
-        run: bun run lint
+      - name: Run Biome lint
+        run: bunx biome check .
 
       - name: Run TypeScript typecheck
         run: bun run typecheck
