chore(env): add R2 storage configuration
Add optional environment variables for Cloudflare R2 storage.
When not configured, image uploads gracefully fall back to base64.

--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,15 @@ STRIPE_API_KEY='sk_test_'
 # Stripe Webhook Secret found at https://dashboard.stripe.com/test/webhooks/create?endpoint_location=local
 # This need to replaced with the webhook secret for your webhook endpoint in production
 STRIPE_WEBHOOK_SECRET='whsec_'
-# Stripe Product and Price IDs for your created products 
+# Stripe Product and Price IDs for your created products
 # found at https://dashboard.stripe.com/test/products
 STRIPE_PRO_MONTHLY_PLAN_ID='price_'
+
+# Cloudflare R2 Storage (S3-compatible)
+# For storing OG images, QR logos, etc.
+# Get credentials from Cloudflare dashboard: R2 → Manage R2 API Tokens
+R2_ACCOUNT_ID='your_cloudflare_account_id'
+R2_ACCESS_KEY_ID='your_r2_access_key_id'
+R2_SECRET_ACCESS_KEY='your_r2_secret_access_key'
+R2_BUCKET_NAME='ishortn-images'
+R2_PUBLIC_URL='https://pub-xxx.r2.dev'
