--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.2.1",
+    "@aws-sdk/client-s3": "^3.966.0",
     "@clerk/nextjs": "^6.35.4",
     "@hookform/resolvers": "^3.3.4",
     "@lemonsqueezy/lemonsqueezy.js": "^4.0.0",
