feat(cron): add daily cleanup job for deleted accounts
- Add cleanup-accounts route handler with CRON_SECRET validation
- Schedule daily execution at 1 AM UTC via vercel.json
- Clean up accounts past 30-day grace period with cascading deletes

--- a/vercel.json
+++ b/vercel.json
@@ -20,6 +20,10 @@
     {
       "path": "/api/cron/cleanup-expired",
       "schedule": "0 4 * * *"
+    },
+    {
+      "path": "/api/cron/cleanup-accounts",
+      "schedule": "0 1 * * *"
     }
   ]
 }
